--- a/css/styles.css
+++ b/css/styles.css
@@ -25,21 +25,20 @@ time {
   flex-direction: column;
 }
 
-#container>* {
+#container > * {
   width: 700px;
   margin: 0 auto;
 }
 
 @media only screen and (max-width: 800px) {
-  #container>* {
+  #container > * {
     width: auto;
     margin: 0 1.2em;
   }
 }
 
 #container header {
-  margin-bottom: 0em;
-  text-align: center;
+  margin-bottom: 1em;
 }
 
 #container header h1 {
@@ -55,37 +54,42 @@ time {
   margin: 0;
   padding: 0;
   list-style: none;
-  justify-content: center;
+  float: right;
 }
 
 #container header ul li {
   margin-left: 1em;
 }
 
+@media only screen and (max-width: 800px) {
+  #container header ul {
+    float: none;
+  }
+  #container header ul li {
+    margin: 0 1em 0 0;
+  }
+}
+
 #container nav {
   border-bottom: solid 3px #cecece;
-  padding-bottom: 0.1em;
+  padding-bottom: 0.5em;
   font-family: "Ruda", sans-serif;
 }
 
-#social-media, #container nav ul {
-  margin: 2em 0;
+#container nav ul {
+  margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 #container nav ul li {
-  margin-left: 1.5em;
-}
-
-#social-media li {
-  margin-left: 2em;
+  margin-left: 1em;
 }
 
 #container nav ul li a.active {
-  border-bottom: 0.2em solid #666666;
+  border-bottom: 0.5em solid #666666;
 }
 
 #container main {
@@ -124,8 +128,7 @@ time {
   border-bottom: 1px solid #cecece;
 }
 
-#container main section#list ul li time,
-#container main section#list ul li span.count {
+#container main section#list ul li time, #container main section#list ul li span.count {
   float: right;
 }
 
@@ -183,33 +186,26 @@ time {
 
 #container footer {
   border-top: solid 1px #cecece;
-  text-align: center;
 }
 
 #container footer h6 {
   font-size: 0.8em;
 }
 
-.meta-aside,
-#container main section#home ul li aside,
-#container main article aside {
+.meta-aside, #container main section#home ul li aside, #container main article aside {
   margin: 0.5em 0;
   font-family: "Ruda", sans-serif;
   color: #909090;
   font-size: 0.8em;
 }
 
-.meta-aside ul,
-#container main section#home ul li aside ul,
-#container main article aside ul {
+.meta-aside ul, #container main section#home ul li aside ul, #container main article aside ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.meta-aside ul li,
-#container main section#home ul li aside ul li,
-#container main article aside ul li {
+.meta-aside ul li, #container main section#home ul li aside ul li, #container main article aside ul li {
   margin: 0;
   padding: 0;
 }
@@ -219,25 +215,18 @@ a {
   text-decoration: none;
 }
 
-.image,
-figure img,
-img {
+.image, figure img, img {
   width: 100%;
   box-shadow: 0 3px 3px #bbbbbb;
 }
 
-.full-image,
-figure.full img,
-img[src*="full"] {
+.full-image, figure.full img, img[src*="full"] {
   width: 100%;
   box-shadow: 0 3px 3px #bbbbbb;
 }
 
 @supports (width: 100vw) {
-
-  .full-image,
-  figure.full img,
-  img[src*="full"] {
+  .full-image, figure.full img, img[src*="full"] {
     width: 100vw;
     position: relative;
     left: 50%;
@@ -247,18 +236,13 @@ img[src*="full"] {
   }
 }
 
-.mid-image,
-figure.mid img,
-img[src*="mid"] {
+.mid-image, figure.mid img, img[src*="mid"] {
   width: 100%;
   box-shadow: 0 3px 3px #bbbbbb;
 }
 
 @supports (width: 100vw) {
-
-  .mid-image,
-  figure.mid img,
-  img[src*="mid"] {
+  .mid-image, figure.mid img, img[src*="mid"] {
     width: 800px;
     position: relative;
     left: 50%;
@@ -266,12 +250,8 @@ img[src*="mid"] {
     margin-left: -400px;
     margin-right: -400px;
   }
-
   @media only screen and (max-width: 800px) {
-
-    .mid-image,
-    figure.mid img,
-    img[src*="mid"] {
+    .mid-image, figure.mid img, img[src*="mid"] {
       width: 100%;
       left: 0;
       right: 0;
@@ -280,9 +260,7 @@ img[src*="mid"] {
   }
 }
 
-.float-image,
-figure.float img,
-img[src*="float"] {
+.float-image, figure.float img, img[src*="float"] {
   width: 300px;
   float: left;
   margin: 0 1em 1em -3em;
@@ -290,19 +268,14 @@ img[src*="float"] {
 }
 
 @media only screen and (max-width: 800px) {
-
-  .float-image,
-  figure.float img,
-  img[src*="float"] {
+  .float-image, figure.float img, img[src*="float"] {
     float: none;
     margin: 0;
     width: 100%;
   }
 }
 
-.float-image-right,
-figure.float-right img,
-img[src*="float-right"] {
+.float-image-right, figure.float-right img, img[src*="float-right"] {
   width: 300px;
   float: right;
   margin: 0 -3em 1em 1em;
@@ -310,10 +283,7 @@ img[src*="float-right"] {
 }
 
 @media only screen and (max-width: 800px) {
-
-  .float-image-right,
-  figure.float-right img,
-  img[src*="float-right"] {
+  .float-image-right, figure.float-right img, img[src*="float-right"] {
     float: none;
     margin: 0;
     width: 100%;
