--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -3,6 +3,15 @@
     text-align: center;
 }
 
+#container header h1 {
+    margin-top: 2em;
+    margin-bottom: 0;
+}
+
+#container header p {
+    margin: 0.3em;
+}
+
 #container header ul {
     justify-content: center;
     float: none;
