--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -54,3 +54,24 @@
     width: 67%;
     resize: vertical;
 }
+
+.instGallery {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.instPic {
+    height: 150px;
+    max-width: 150px;
+    padding-bottom: 1em;
+}
+
+.instPic img {
+    object-fit: cover;
+    object-position: center;
+    height: 100%;
+    width: 100%;
+    box-shadow: 3px 3px 5px #888888;
+}
